--- a/FilterCamera/Base.lproj/Main.storyboard
+++ b/FilterCamera/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -18,31 +19,138 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3uy-nA-yFe" customClass="GPUImageView">
-                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
-                                <subviews>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="LnX-IC-LKU">
-                                        <rect key="frame" x="8" y="540" width="584" height="31"/>
-                                        <connections>
-                                            <action selector="filterSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="R8D-Xa-OhO"/>
-                                        </connections>
-                                    </slider>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="150" y="20" width="300" height="300"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="LnX-IC-LKU" secondAttribute="trailing" constant="10" id="Dct-od-pAt"/>
-                                    <constraint firstAttribute="bottom" secondItem="LnX-IC-LKU" secondAttribute="bottom" constant="10" id="RcT-Ye-Evq"/>
-                                    <constraint firstItem="LnX-IC-LKU" firstAttribute="leading" secondItem="3uy-nA-yFe" secondAttribute="leading" constant="10" id="ShO-Kx-oRs"/>
-                                    <constraint firstItem="LnX-IC-LKU" firstAttribute="centerX" secondItem="3uy-nA-yFe" secondAttribute="centerX" id="r6o-kJ-zgF"/>
+                                    <constraint firstAttribute="height" constant="300" id="DK5-0O-Ixk"/>
+                                    <constraint firstAttribute="width" constant="300" id="iuE-Gp-GfA"/>
                                 </constraints>
                             </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="FrN-Dr-nHj">
+                                <rect key="frame" x="0.0" y="468" width="580" height="166"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="pcu-C5-kbm">
+                                        <rect key="frame" x="0.0" y="0.0" width="580" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ROr-LN-opc">
+                                                <rect key="frame" x="0.0" y="0.0" width="145" height="30"/>
+                                                <state key="normal" title="重置HSB"/>
+                                                <connections>
+                                                    <action selector="resetHSBButtonClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Byb-vA-1tf"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dar-3P-nT3">
+                                                <rect key="frame" x="145" y="0.0" width="145" height="30"/>
+                                                <state key="normal" title="重置H"/>
+                                                <connections>
+                                                    <action selector="resetHButtonClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Y2h-7e-NYW"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qj8-w4-thi">
+                                                <rect key="frame" x="290" y="0.0" width="145" height="30"/>
+                                                <state key="normal" title="重置S"/>
+                                                <connections>
+                                                    <action selector="resetSButtonClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6nD-ge-0DR"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TvM-Bu-hqf">
+                                                <rect key="frame" x="435" y="0.0" width="145" height="30"/>
+                                                <state key="normal" title="重置B"/>
+                                                <connections>
+                                                    <action selector="resetBButtonClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3oO-8C-Dxp"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mwj-uv-sd7">
+                                        <rect key="frame" x="0.0" y="34" width="580" height="30"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="H[-360, 360]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TY9-D1-u7l">
+                                                <rect key="frame" x="0.0" y="0.0" width="14" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <slider opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-360" maxValue="360" translatesAutoresizingMaskIntoConstraints="NO" id="UFh-Xz-A40">
+                                                <rect key="frame" x="22" y="0.0" width="560" height="31"/>
+                                                <connections>
+                                                    <action selector="hSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="cSN-Fr-NN0"/>
+                                                </connections>
+                                            </slider>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Nq8-XJ-MTR">
+                                        <rect key="frame" x="0.0" y="68" width="580" height="30"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="S[0, 2]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yI1-jA-1IS">
+                                                <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <slider opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="2" translatesAutoresizingMaskIntoConstraints="NO" id="KOB-oW-VhS">
+                                                <rect key="frame" x="8" y="0.0" width="574" height="31"/>
+                                                <connections>
+                                                    <action selector="sSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="44b-IL-u3K"/>
+                                                </connections>
+                                            </slider>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="iof-k0-Jn1">
+                                        <rect key="frame" x="0.0" y="102" width="580" height="30"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="B[0, 2]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VZ2-x7-L0w">
+                                                <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <slider opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="2" translatesAutoresizingMaskIntoConstraints="NO" id="squ-PZ-6uz">
+                                                <rect key="frame" x="8" y="0.0" width="574" height="31"/>
+                                                <connections>
+                                                    <action selector="bSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="ZD3-M2-wtP"/>
+                                                </connections>
+                                            </slider>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="9ah-8M-Zd1">
+                                        <rect key="frame" x="0.0" y="136" width="580" height="30"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="美颜0-1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CZp-Ig-RnV">
+                                                <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <slider opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="LnX-IC-LKU">
+                                                <rect key="frame" x="8" y="0.0" width="574" height="31"/>
+                                                <connections>
+                                                    <action selector="filterSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="R8D-Xa-OhO"/>
+                                                </connections>
+                                            </slider>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="3uy-nA-yFe" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="FQa-vZ-err"/>
+                            <constraint firstItem="3uy-nA-yFe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="R2M-JF-YG2"/>
                             <constraint firstAttribute="trailing" secondItem="3uy-nA-yFe" secondAttribute="trailing" id="ZbA-lO-DWH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="FrN-Dr-nHj" secondAttribute="trailing" id="i9Y-6Q-wJe"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="3uy-nA-yFe" secondAttribute="bottom" id="n0v-5u-lUx"/>
+                            <constraint firstItem="FrN-Dr-nHj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="o88-Hn-rs9"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="FrN-Dr-nHj" secondAttribute="bottom" id="si9-Vu-Rdu"/>
                             <constraint firstItem="3uy-nA-yFe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ts9-1k-ncd"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="ZbA-lO-DWH"/>
+                                <exclude reference="ts9-1k-ncd"/>
+                                <exclude reference="n0v-5u-lUx"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="previewView" destination="3uy-nA-yFe" id="ogY-h7-PVK"/>
@@ -50,6 +158,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="223" y="136"/>
         </scene>
     </scenes>
 </document>
