--- a/FilterCamera/Base.lproj/Main.storyboard
+++ b/FilterCamera/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="16A320" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="sJm-0G-Kg6">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3uy-nA-yFe" customClass="GPUImageView">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3uy-nA-yFe" customClass="GPUImageView">
                                 <rect key="frame" x="150" y="20" width="300" height="300"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -27,10 +27,36 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="FrN-Dr-nHj">
-                                <rect key="frame" x="0.0" y="468" width="580" height="166"/>
+                                <rect key="frame" x="0.0" y="468" width="580" height="200"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="pcu-C5-kbm">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Sop-a7-yuE">
                                         <rect key="frame" x="0.0" y="0.0" width="580" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jfD-vX-6TP">
+                                                <rect key="frame" x="0.0" y="0.0" width="194" height="30"/>
+                                                <state key="normal" title="开始录像"/>
+                                                <connections>
+                                                    <action selector="startButtonClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wUy-NE-mUH"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JFX-uY-ugm">
+                                                <rect key="frame" x="194" y="0.0" width="193" height="30"/>
+                                                <state key="normal" title="结束录像"/>
+                                                <connections>
+                                                    <action selector="stopButtonClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fgz-t5-Rg9"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PrC-JK-mMj">
+                                                <rect key="frame" x="387" y="0.0" width="194" height="30"/>
+                                                <state key="normal" title="打开视频"/>
+                                                <connections>
+                                                    <action selector="openButtonClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FUi-RR-OqY"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="pcu-C5-kbm">
+                                        <rect key="frame" x="0.0" y="34" width="580" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ROr-LN-opc">
                                                 <rect key="frame" x="0.0" y="0.0" width="145" height="30"/>
@@ -63,16 +89,16 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mwj-uv-sd7">
-                                        <rect key="frame" x="0.0" y="34" width="580" height="30"/>
+                                        <rect key="frame" x="0.0" y="68" width="580" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="H[-360, 360]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TY9-D1-u7l">
-                                                <rect key="frame" x="0.0" y="0.0" width="14" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <slider opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-360" maxValue="360" translatesAutoresizingMaskIntoConstraints="NO" id="UFh-Xz-A40">
-                                                <rect key="frame" x="22" y="0.0" width="560" height="31"/>
+                                                <rect key="frame" x="8" y="0.0" width="574" height="31"/>
                                                 <connections>
                                                     <action selector="hSliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="cSN-Fr-NN0"/>
                                                 </connections>
@@ -80,7 +106,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Nq8-XJ-MTR">
-                                        <rect key="frame" x="0.0" y="68" width="580" height="30"/>
+                                        <rect key="frame" x="0.0" y="102" width="580" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="S[0, 2]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yI1-jA-1IS">
                                                 <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
@@ -97,7 +123,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="iof-k0-Jn1">
-                                        <rect key="frame" x="0.0" y="102" width="580" height="30"/>
+                                        <rect key="frame" x="0.0" y="136" width="580" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="B[0, 2]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VZ2-x7-L0w">
                                                 <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
@@ -114,7 +140,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="9ah-8M-Zd1">
-                                        <rect key="frame" x="0.0" y="136" width="580" height="30"/>
+                                        <rect key="frame" x="0.0" y="170" width="580" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="美颜0-1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CZp-Ig-RnV">
                                                 <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
@@ -152,11 +178,30 @@
                             </mask>
                         </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="S4y-Jf-VnL"/>
                     <connections>
                         <outlet property="previewView" destination="3uy-nA-yFe" id="ogY-h7-PVK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1035" y="136"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="D33-Ez-R28">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sJm-0G-Kg6" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="uLC-Jd-pWu">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="fIX-KQ-aT0"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qb3-hC-5Z1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="223" y="136"/>
         </scene>
