--- a/FilterCamera/Base.lproj/Main.storyboard
+++ b/FilterCamera/Base.lproj/Main.storyboard
@@ -27,10 +27,29 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="FrN-Dr-nHj">
-                                <rect key="frame" x="0.0" y="468" width="580" height="200"/>
+                                <rect key="frame" x="0.0" y="468" width="580" height="234"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Sop-a7-yuE">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="5dJ-xj-Tsa">
                                         <rect key="frame" x="0.0" y="0.0" width="580" height="30"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YyV-DH-PEf">
+                                                <rect key="frame" x="0.0" y="0.0" width="290" height="30"/>
+                                                <state key="normal" title="滤镜1"/>
+                                                <connections>
+                                                    <action selector="changeFilter1ButtonClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jjk-7D-YvT"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jfM-GX-DUj">
+                                                <rect key="frame" x="290" y="0.0" width="290" height="30"/>
+                                                <state key="normal" title="滤镜2"/>
+                                                <connections>
+                                                    <action selector="changeFilter2ButtonClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aJf-oQ-sho"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Sop-a7-yuE">
+                                        <rect key="frame" x="0.0" y="34" width="580" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jfD-vX-6TP">
                                                 <rect key="frame" x="0.0" y="0.0" width="194" height="30"/>
@@ -56,7 +75,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="pcu-C5-kbm">
-                                        <rect key="frame" x="0.0" y="34" width="580" height="30"/>
+                                        <rect key="frame" x="0.0" y="68" width="580" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ROr-LN-opc">
                                                 <rect key="frame" x="0.0" y="0.0" width="145" height="30"/>
@@ -89,7 +108,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mwj-uv-sd7">
-                                        <rect key="frame" x="0.0" y="68" width="580" height="30"/>
+                                        <rect key="frame" x="0.0" y="102" width="580" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="H[-360, 360]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TY9-D1-u7l">
                                                 <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
@@ -106,7 +125,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Nq8-XJ-MTR">
-                                        <rect key="frame" x="0.0" y="102" width="580" height="30"/>
+                                        <rect key="frame" x="0.0" y="136" width="580" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="S[0, 2]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yI1-jA-1IS">
                                                 <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
@@ -123,7 +142,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="iof-k0-Jn1">
-                                        <rect key="frame" x="0.0" y="136" width="580" height="30"/>
+                                        <rect key="frame" x="0.0" y="170" width="580" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="B[0, 2]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VZ2-x7-L0w">
                                                 <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
@@ -140,7 +159,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="9ah-8M-Zd1">
-                                        <rect key="frame" x="0.0" y="170" width="580" height="30"/>
+                                        <rect key="frame" x="0.0" y="204" width="580" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="美颜0-1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CZp-Ig-RnV">
                                                 <rect key="frame" x="0.0" y="0.0" width="0.0" height="30"/>
